Fix accordion spacing

--- a/src/styles/Accordion.module.css
+++ b/src/styles/Accordion.module.css
@@ -2,7 +2,7 @@
   margin-top: 1rem;
   margin-bottom: 1rem;
   height: auto;
-  width: 900px;
+  width: 965px;
   display: block;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
@@ -63,6 +63,8 @@
   border-top: 0;
   border-bottom-right-radius: 10px;
   border-bottom-left-radius: 10px;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .contentOpen {
